# suumo_scraping

./: .gitignore  Dockerfile  Dockerfile.scraping  Dockerfile.streamlit  Makefile  README.md  analysis.ipynb  pyproject.toml  requirements.txt  run.py  scrape.py  setting.yml
scraping/: .gitignore  __main__.py  pyproject.toml  requirements.txt  scrape.py  scraping_manager.py  setting.yml
scraping/data/: geocoding_api_cache.json.backup  geocoding_api_history.json
scraping/data/airport_line/formatted/: 20240528.csv
scraping/data/fukuoka_convinient/formatted/: 20250322.csv  20250323.csv  20250324.csv  20250331.csv  20250407.csv  20250414.csv  20250421.csv  20250428.csv  20250505.csv  20250512.csv  20250519.csv  20250526.csv  20250602.csv  20250609.csv  20250616.csv  20250623.csv  20250630.csv  20250707.csv  20250714.csv  20250721.csv  20250728.csv  20250804.csv  20250811.csv  20250818.csv  20250825.csv  20250901.csv  20250908.csv  20250915.csv  20250922.csv  20250929.csv  20251006.csv  20251013.csv  20251020.csv  20251027.csv  20251103.csv  20251110.csv  20251117.csv  20251124.csv  20251201.csv  20251208.csv  (+13 more)
scraping/data/fukuoka_convinient/grouped/: 20250322.csv  20250323.csv  20250324.csv  20250331.csv  20250407.csv  20250414.csv  20250421.csv  20250428.csv  20250505.csv  20250512.csv  20250519.csv  20250526.csv  20250602.csv  20250609.csv  20250616.csv  20250623.csv  20250630.csv  20250707.csv  20250714.csv  20250721.csv  (+31 more)
scraping/src/core/: formatter.py  grouping.py  scraping_manager.py
scraping/src/utils/: gcp_spreadsheet.py  geocoder.py  logger.py
(+108 files in other folders)
